--- a/lp/template/base.html
+++ b/lp/template/base.html
@@ -52,9 +52,9 @@
         <div>contact
             <div class = "sns-logos">
                 <ul->
-                    <li> <a f  </li>
-                    <li></li>
-                    <li></li>
+                    <li id = "twitter"> <a href = "twitter"  </li>
+                    <li id = "line"></li>
+                    <li id = "facebook"></li>
                 </ul->
             </div>
         </div>
