--- a/lp/template/base.html
+++ b/lp/template/base.html
@@ -52,9 +52,9 @@
         <div>contact
             <div class = "sns-logos">
                 <ul->
-                    <li id = "twitter"> <a href = "twitter"  </li>
-                    <li id = "line"></li>
-                    <li id = "facebook"></li>
+                    <li id = "twitter"> <a href = "/" alt = "twitter" ></a> </li>
+                    <li id = "line"><a href="/" alt = "Line "></a></li>
+                    <li id = "instagram"><a href="/",alt = "instagram"></a></li>
                 </ul->
             </div>
         </div>
