--- a/lp/template/base.html
+++ b/lp/template/base.html
@@ -57,7 +57,7 @@
                     <li id = "instagram"><a href="/",alt = "instagram"></a></li>
                 </ul->
             </div>
-        </div>
+        </div>gs
 
     </footer>
 
