--- a/lp/templates/base.html
+++ b/lp/templates/base.html
@@ -1,7 +1,7 @@
 {% load static %}
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
 <head>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <meta charset="UTF-8">
@@ -13,11 +13,11 @@
 </head>
 
 <body>
-    <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="container-fluid">
+    <header >
+        <nav class="navbar h-75 navbar-expand-lg navbar-light bg-light border-bottom border-2 border-dark">
+            <div class="container-fluid ">
                <div class="navbar-brand"> 
-                <img src="{% static 'image\sample.jpg' %}" alt = "ロゴ画像">
+                <img src="{% static 'image\sample.jpg' %}" alt = "ロゴ画像" id="base_img">
               <a class ="text-decoration-none text-reset" href="#">La+</a>
               </div>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -47,29 +47,27 @@
     </header>
 
     {% block content %}{% endblock %}
-
-    <p>h1</p>
-
     
-    <footer>
-        <div class="text-center">Contact
-            <div class = "sns-logos">
-                <ul class="d-flex p-2 ">
-                    <li class="text-decoration-none">
-                        <img src = "{% static 'image\sample.jpg' %}" alt = "twitter" >
+    <footer class="text-white">
+        <div class="text-center">合同会社La+
+            <div class = "sns-logos d-flex">
+                <ul class="list-inline mx-auto justify-content-center">
+                    <li class="list-inline-item ">
+                        <img src = "{% static 'image\sample.jpg' %}" alt = "twitter"  class="rounded-circle" id="base_img" >
                         <a class="nav-link" href="#"></a>
                     </li>
-                    <li class="text-decoration-none">
-                        <img src="{% static 'image\sample.jpg' %}" alt = "Line ">
+                    <li class="list-inline-item">
+                        <img src="{% static 'image\sample.jpg' %}" alt = "Line"  class="rounded-circle" id="base_img">
                         <a class="nav-link" href="#">  
                         </a></li>
-                    <li class="text-decoration-none">
-                        <img src="{% static 'image\sample.jpg' %}" alt = "instagram">
+                    <li class="list-inline-item">
+                        <img src="{% static 'image\sample.jpg' %}" alt = "instagram"  class="rounded-circle" id="base_img">
                         <a class="nav-link" href="#">
 
                         </a></li>
                 </ul>
             </div>
+            <p>会社についてなんかああああああああああああああああcdsaあdddddddddddddddddddddddddあ</p>
         </div>
 
     </footer>
