--- a/lp/templates/top.html
+++ b/lp/templates/top.html
@@ -7,7 +7,7 @@
 <section>
 <div class="">
 <img  src="{% static 'image\sample.jpg' %}" alt = "ロゴ画像" class="img-fluid position-relative">
-<h1 id ="motto" class="position-relative " >nannkaiikanjinoo
+<h1 id ="motto" class="position-relative " >motto
     <br>nooooo
 </h1>
 </div>
