--- a/lp/templates/top.html
+++ b/lp/templates/top.html
@@ -8,7 +8,7 @@
 <div class="">
 <img  src="{% static 'image\sample.jpg' %}" alt = "ロゴ画像" class="img-fluid position-relative">
 <h1 id ="motto" class="position-relative " >motto
-    <br>nooooo
+    <br>noooaaaaaaaaaaaaaaaaaaaaa
 </h1>
 </div>
 </section>
