--- a/lp/templates/top.html
+++ b/lp/templates/top.html
@@ -5,13 +5,20 @@
 
 {% block content %}
 <section>
-<div class="">
-<img  src="{% static 'image\sample.jpg' %}" alt = "ロゴ画像" class="img-fluid position-relative">
-<h1 id ="motto" class="position-relative " >motto
-    <br>noooaaaaaaaaaaaaaaaaaaaaa
-</h1>
-</div>
+    <div class="container-fluid position-relative">
+        <img  src="{% static 'image\sample.jpg' %}"  class=" img-fluid w-auto h-auto" alt = "ロゴ画像" class="img-fluid position-relative">
+            <div class="position-absolute top-50 start-50 translate-middle">
+                <h1 id ="motto" class="text-center">motto</h1>
+                <h1 class="text-center">faaaaaaaaaaaaa</h1>
+            </div>
+    </div>
+
 </section>
 
-{% endblock %}fjikaifjiajfahbagdaffda
-aa
+
+
+<section>
+
+</section>
+
+{% endblock %}
