--- a/lp/templates/base.html
+++ b/lp/templates/base.html
@@ -26,12 +26,12 @@
               <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Home</a>
+                    <a class="nav-link border-1 border-top border-bottom" href="#">Home</a>
                   </li>
-                  <li class="nav-item">
+                  <li class="nav-item border-bottom">
                     <a class="nav-link" href="#">商品について</a>
                   </li>
-                  <li class="nav-item">
+                  <li class="nav-item border-bottom">
                     <a class="nav-link" href="#">お問い合わせ</a>
                   </li>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
